@@ -169,7 +169,6 @@ public class FiltersCustomizer extends JDialog implements ListSelectionListener 
         projectSpecificCB = new javax.swing.JCheckBox();
 
         setTitle(OStrings.getString("FILTERSCUSTOMIZER_TITLE")); // NOI18N
-        setResizable(false);
         addWindowListener(new java.awt.event.WindowAdapter() {
             public void windowClosing(java.awt.event.WindowEvent evt) {
                 closeDialog(evt);
@@ -277,7 +276,7 @@ public class FiltersCustomizer extends JDialog implements ListSelectionListener 
         gridBagConstraints.insets = new java.awt.Insets(3, 3, 3, 3);
         getContentPane().add(optionsButton, gridBagConstraints);
 
-        org.openide.awt.Mnemonics.setLocalizedText(projectSpecificCB, OStrings.getString("FILTERSCUSTOMIZER_CHECKBOX_PROJECTSPECIFIC"));
+        org.openide.awt.Mnemonics.setLocalizedText(projectSpecificCB, "jCheckBox1");
         projectSpecificCB.setHorizontalAlignment(javax.swing.SwingConstants.LEFT);
         projectSpecificCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
